--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+          # Step 2: Setup Java 11
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'  # Use Temurin distribution
+
       # Install Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -34,3 +41,17 @@ jobs:
         with:
           name: release-apk
           path: build/app/outputs/flutter-apk/app-release.apk
+
+
+            # Step 7: Send Email with the APK
+      - name: Send Email with APK
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.sendgrid.net
+          server_port: 587
+          username: apikey               # SendGrid API username
+          password: ${{ secrets.SENDGRID_API_KEY }}  # SendGrid API key stored in secrets
+          subject: "New APK Build for Testing"
+          body: "Hello,\n\nThe latest APK build is available for testing.\n\nPlease download it from the GitHub Actions Artifacts.\n\nBest regards,\nCI/CD Pipeline"
+          to: aaryan@prepseed.com
+          from: ci-cd@yourdomain.com     # Change this to a valid email address
