--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -43,15 +43,15 @@ jobs:
           path: build/app/outputs/flutter-apk/app-release.apk
 
 
-#          # Step 7: Send Email with the APK
-#      - name: Send Email with APK
-#        uses: dawidd6/action-send-mail@v3
-#        with:
-#          server_address: smtp.sendgrid.net
-#          server_port: 587
-#          username: SENDGRID_API_KEY              # SendGrid API username
-#          password:  ${{ secrets.SENDGRID_API_KEY }}    # SendGrid API key stored in secrets
-#          subject: "New APK Build for Testing"
-#          body: "Hello,\n\nThe latest APK build is available for testing.\n\nPlease download it from the GitHub Actions Artifacts.\n\nBest regards,\nCI/CD Pipeline"
-#          to: jainaryan24111@gmail.com
-#          from: flutterdevaaryan@gmail.com
+          # Step 7: Send Email with the APK
+      - name: Send Email with APK
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.sendgrid.net
+          server_port: 587
+          username: SENDGRID_API_KEY             # SendGrid API username
+          password:  ${{ secrets.SENDGRID_API_KEY }}    # SendGrid API key stored in secrets
+          subject: "New APK Build for Testing"
+          body: "Hello,\n\nThe latest APK build is available for testing.\n\nPlease download it from the GitHub Actions Artifacts.\n\nBest regards,\nCI/CD Pipeline"
+          to: jainaryan24111@gmail.com
+          from: flutterdevaaryan@gmail.com
