--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -45,15 +45,15 @@ jobs:
 
           # Step 7: Send Email with the APK
       - name: Send Email with APK
-        uses: dawidd6/action-send-mail@v3
+        uses: dawidd6/action-send-mail@v3.12.0
         with:
           server_address: "smtp.gmail.com"
           server_port: 465
-          username: flutterdevaaryan@gmail.com
-          password:  ${{secrets.PASSWORD}}
+          username: ${{secrets.SENDER_EMAIL}}
+          password: ${{secrets.PASSWORD}}
           subject: "New APK Build for Testing"
           body: "Hello,\n\nThe latest APK build is available for testing.\n\nPlease download it from the GitHub Actions Artifacts.\n\nBest regards,\nCI/CD Pipeline"
           to: jainaryan24111@gmail.com
-          from: flutterdevaaryan@gmail.com
+          from: ${{secrets.SENDER_EMAIL}}
           attachments: |
             build/app/outputs/flutter-apk/app-release.apk
